<resources>
    <string name="app_name">智能抄表系统</string>
    <string name="text_copyright">Copyright © 2016 Shanghai3h</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_main">智能抄表系统</string>
    <string name="title_activity_task_list">任务列表</string>
    <string name="title_activity_volume_list">册本列表</string>
    <string name="title_activity_delay_list">延迟列表</string>
    <string name="title_activity_lgld_list">量高量低</string>
    <string name="title_activity_delay_record">延迟录入</string>
    <string name="title_activity_record_lr">抄表录入</string>
    <string name="text_network_not_connected">网络未连接</string>
    <string name="label_login">登 录</string>
    <string name="label_username">帐号</string>
    <string name="label_password">密码</string>
    <string name="text_username_not_null">帐号不能为空</string>
    <string name="text_password_not_null">密码不能为空</string>
    <string name="text_failure_to_login">登录失败</string>
    <string name="text_failure_to_getuserinfo">获取用户信息失败</string>
    <string name="text_failure_to_saveuserinfo">保存用户信息失败</string>
    <string name="action_update">数据同步</string>
    <string name="action_save">保存</string>
    <string name="text_prompt">提示</string>
    <string name="text_request">询问</string>
    <string name="text_biaoweizuobiao">表位坐标</string>
    <string name="move_prompt">移动到册本</string>
    <string name="label_main_word">工作</string>
    <string name="label_main_statistics">统计</string>
    <string name="label_main_setting">设置</string>
    <string name="label_record_lr">抄表录入</string>
    <string name="label_record_detail_info">详细信息</string>
    <string name="app_description">智能抄表系统</string>
    <string name="text_welcome">欢迎光临上海三高</string>
    <string name="text_about">更多产品请浏览：www.shanghai3h.com &#x000A;客户服务热线：+86-21-55572216 &#x000A;Copyright &#x00a9; 2013 Shanghai 3H</string>
    <string name="text_yes">是</string>
    <string name="text_no">否</string>
    <string name="text_cancel">取消</string>
    <string name="text_ok">确定</string>
    <string name="text_abandon">放弃</string>
    <string name="text_save">保存</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_logout">退出</string>
    <string name="action_refresh">刷新</string>
    <string name="action_style">风格</string>
    <string name="sysFace">系统风格</string>
    <string name="downloadsetting">数据下载模式</string>
    <string name="uploadsetting">数据上传模式</string>
    <string name="image_quality">图片质量</string>
    <string name="clearData">恢复出厂设置</string>
    <string name="common_setting">常用抄表设置</string>
    <string name="common">普通</string>
    <string name="text_delete">提示</string>
    <string name="action_ok">确定</string>
    <string name="action_adjust_volume">册本调整</string>
    <string name="action_table_number">表号定位</string>
    <string name="action_changenumber">跳转</string>
    <string name="action_select">选择</string>
    <string name="action_user">用户</string>
    <string name="action_other">其它</string>
    <string name="title_activity_welcome">智能抄表系统</string>
    <string name="approve_network">请连网认证!</string>
    <string name="title_activity_chaobiaorw">抄表任务</string>
    <string name="title_activity_arcgismap">地图</string>
    <string name="title_activity_setting">抄表系统设置</string>
    <string name="title_activity_statistics">统计</string>
    <string name="text_account_password_error">账号或密码错误</string>
    <string name="text_no_network_account_password_error">离线登录，账号或密码错误</string>
    <string name="action_commit">提交</string>
    <string name="text_remote_yes">已巡检</string>
    <string name="text_remote_no">待巡检</string>
    <string name="text_remote_up">按地址升序</string>
    <string name="text_remote_down">按地址降序</string>
    <string name="text_remote_all">全部</string>
    <string name="text_xunjian_type">巡检状态</string>
    <string name="title_activity_remoteinspectionlistactivity">远传巡检</string>
    <string name="title_activity_remoteinspectionhistorylistactivity">远传巡检历史</string>
    <string name="title_activity_inspectionInputactivity">远传巡检</string>
    <string name="title_activity_changenumber">调整序号</string>
    <string name="title_activity_check">册本检查</string>
    <string name="title_activity_chaobiaolr">抄表录入</string>
    <string name="title_activity_hint">用户常用配置</string>
    <string name="title_activity_rectifierinputting">校正仪录入</string>
    <string name="title_activity_violationinputting">违章录入</string>
    <string name="title_activity_abnormalmeasurement">非正常计量</string>
    <string name="title_activity_select">组合查询</string>
    <string name="title_activity_result">查询结果</string>
    <string name="title_activity_kehuxiangxixx">客户详细信息</string>
    <string name="title_activity_temporary">临时册本</string>
    <string name="title_activity_user_common">常用抄表设置</string>
    <string name="title_activity_force_image">强制拍照设置</string>
    <string name="title_activity_adjust_user_common">调整常用抄表</string>
    <string name="title_activity_settings">系统设置</string>
    <string name="title_activity_news">系统公告</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_lianggaold">量高量低</string>
    <string name="title_activity_help">系统帮助</string>
    <string name="title_activity_cebenlb">册本列表</string>
    <string name="title_activity_userlist">用户列表</string>
    <string name="title_activity_salesstacked">已抄、未抄表卡数对比</string>
    <string name="title_activity_pie">抄表卡数对比</string>
    <string name="title_activity_map">地图</string>
    <string name="title_activity_fuzzy_search">模糊查询</string>
    <string name="title_activity_yanchi">延迟抄表</string>
    <string name="title_activity_waifuyanchi">外复抄表</string>
    <string name="title_activity_hotlineselect">热线工单(指定用户)</string>
    <string name="title_question">询问</string>
    <string name="title_info">提示</string>
    <string name="title_warn">警告</string>
    <string name="title_user_changyong">用户常用配置</string>
    <string name="title_map">地图</string>
    <string name="title_fuzzy_search">模糊查询</string>
    <string name="load_state_0">正在初始化</string>
    <string name="load_state_10">程序目录初始化完成</string>
    <string name="load_state_20">正在进行版本检查</string>
    <string name="load_state_21">发现新的版本</string>
    <string name="load_state_22">正在下载新的版本</string>
    <string name="load_state_23">最新版本下载成功</string>
    <string name="load_state_24">准备进行版本更新</string>
    <string name="load_state_25">下载最新版本失败</string>
    <string name="load_state_30">正在进行数据检查</string>
    <string name="load_state_31">发现新的数据</string>
    <string name="load_state_32">正在下载新的数据</string>
    <string name="load_state_33">下载完成</string>
    <string name="load_state_34">正在更新基本数据文件</string>
    <string name="load_state_50">正在更新应用程序</string>
    <string name="load_state_35">下载最新数据失败</string>
    <string name="load_state_40">更新完成</string>
    <string name="load_chaibiaoyuan">请选择拆表员</string>
    <string name="load_sign_wait_message">正在验证中</string>
    <string name="refresh_sign_wait_message">正在刷新</string>
    <string name="text_feedback_loading">正在处理...</string>
    <string name="text_feedback_shuangchuan">正在上传</string>
    <string name="label_shuangchuan_ok">同步成功</string>
    <string name="label_shuangchuan_no">同步失败</string>
    <string name="label_shuangchuan_shuju_no">数据上传失败</string>
    <string name="label_shuangchuan_duomeiti_no">附件上传失败</string>
    <string name="label_lockeddb">数据库被锁定，不能刷新</string>
    <string name="label_not_network_shuaxin">没有网络，刷新失败</string>
    <string name="label_not_network_shangchuan">没有网络，上传失败</string>
    <string name="label_logining">登录中</string>
    <string name="label_login_failure">登录失败</string>
    <string name="label_vertype">域认证</string>
    <string name="label_cancel">取消</string>
    <string name="label_cid">NO.</string>
    <string name="label_huanbiaorq">换表日期</string>
    <string name="label_koujing">口径</string>
    <string name="label_shangcicm">上次抄码</string>
    <string name="label_biaohao">表号</string>
    <string name="label_kaishisl">开始水量</string>
    <string name="label_jieshusl">结束水量</string>
    <string name="label_chaobiaozt">抄表状态</string>
    <string name="label_chaobiaoqk">抄表情况</string>
    <string name="label_chaobiaobz">抄表备注</string>
    <string name="label_bencicm">本次抄码</string>
    <string name="label_bencisl">抄见水量</string>
    <string name="label_calculate_cash">预算金额</string>
    <string name="label_calculate">预算</string>
    <string name="label_biaowei">表位</string>
    <string name="label_save">保存</string>
    <string name="label_more">更多</string>
    <string name="label_image">照片</string>
    <string name="label_yanchi">延迟</string>
    <string name="label_calcute">计算</string>
    <string name="label_lianggao">量高</string>
    <string name="label_liangdi">量低</string>
    <string name="error_activate_not_network">网络连接失败</string>
    <string name="error_login_error">认证失败，发生未知错误。&#x000A;请确认抄表机文件初始化完成。</string>
    <string name="error_password_wrong">密码错误</string>
    <string name="error_account_not_exists">首次登录，请联网认证</string>
    <string name="error_account_empty">请输入账号</string>
    <string name="error_password_empty">请输入密码</string>
    <string name="error_request_time_out">请求超时</string>
    <string name="error_exception_file_empty">文件不存在</string>
    <string name="text_info_feedback_success">感谢您的反馈，我们会尽快回复您。</string>
    <string name="text_warn_feedback_fail">发送反馈意见失败。&#x000A;请检查网络连接是否正常。</string>
    <string name="text_warn_sdcard">找不到存储卡,退出程序</string>
    <string name="text_info_chaobiaolr_bencicm">请输入抄码</string>
    <string name="text_info_chaobiaolr_chaobiaozt">请输入抄表状态</string>
    <string name="text_info_chaobiaolr_chaojiansl">请输入抄见水量</string>
    <string name="text_info_chaobiaolr_savesuccess">保存成功</string>
    <string name="text_info_chaobiaolr_savefailed">保存失败</string>
    <string name="text_phone_delete">是否删除本地文件?</string>
    <string name="text_dialog_hint">未设置用户常用配置！</string>
    <string name="text_info_chaobiaolr_calcutefailed">金额计算失败</string>
    <string name="text_info_chaobiaolr_calcutesavefailed">金额保存失败</string>
    <string name="text_info_chaobiaolr_lianggaoyuanyy">必须选择量高原因</string>
    <string name="text_chaobiaosj">抄表数据</string>
    <string name="text_yanchisj">延迟数据</string>
    <string name="lable_jiaofeirq">缴费日期</string>
    <string name="lable_zynysfbh">账务年月\n水费编号</string>
    <string name="lable_zdjewyj">账单金额\n违约金</string>
    <string name="lable_shishouje">实收金额</string>
    <string name="lable_chaobiaorq">抄表日期</string>
    <string name="lable_shangcicm">上次抄码</string>
    <string name="lable_bencicm">本次抄码</string>
    <string name="text_normal">只显示正常</string>
    <string name="text_unnormal">只显示异常</string>
    <string name="text_finished_lianggao">只显示量高</string>
    <string name="text_finished_liangdi">只显示量低</string>
    <string name="text_search">搜索</string>
    <string name="text_jump_number">序号定位</string>
    <string name="change_filter">筛选</string>
    <string name="text_unfinished">只显示未抄</string>
    <string name="text_finished">只显示已抄</string>
    <string name="text_all">显示全部</string>
    <string name="text_setting_data_address">数据服务地址</string>
    <string name="text_setting_data_address_reserved">数据服务备用地址</string>
    <string name="text_setting_arcgis_map_address">地图服务地址</string>
    <string name="text_is_reserved_address">使用备用地址</string>
    <string name="text_setting_file_address">文件服务地址</string>
    <string name="text_setting_file_address_reserved">文件服务备用地址</string>
    <string name="text_sort">排序</string>
    <string name="ascending_order">升序</string>
    <string name="descending_order">降序</string>
    <string name="use_ch_text">按册内序号</string>
    <string name="use_address_text">按用水地址</string>
    <string name="use_amount_text">按金额</string>
    <string name="text_user_number">用户号\u0020:\u0020</string>
    <string name="edit_hint_please_input_user_number">请输入用户编号</string>
    <string name="text_address">地址\u0020:\u0020</string>
    <string name="edit_hint_please_input_address">请输入地址</string>
</resources>