<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mtl_action_update"
        android:icon="@mipmap/ic_btn_refresh"
        android:title="@string/action_update"
        app:showAsAction="always"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mul_action_show_unfinished"
            android:title="@string/text_unfinished"/>
        <item
            android:id="@+id/mul_action_show_finished"
            android:title="@string/text_finished"/>
        <item
            android:id="@+id/mul_action_show_all"
            android:checked="true"
            android:title="@string/text_all"/>
    </group>


</menu>