<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/mvl_action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/text_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/mtl_action_refresh"
        android:icon="@mipmap/ic_btn_refresh"
        android:title="@string/action_update"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mvl_jump_number"
        android:title="@string/text_jump_number"
        app:showAsAction="never" />

    <item
        android:id="@+id/mvl_filter"
        android:title="@string/change_filter"
        app:showAsAction="never" />

</menu>