<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mvl_action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/text_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <group android:checkableBehavior="single"
        android:id="@+id/group_finished">
        <item
            android:id="@+id/action_show_unfinished"
            android:title="@string/text_unfinished"/>

        <item
            android:id="@+id/action_show_finished"
            android:title="@string/text_finished"/>

        <item
            android:id="@+id/mul_action_show_all"
            android:checked="true"
            android:title="@string/text_all"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_show_normal"
            android:visible="false"
            android:title="@string/text_normal"/>

        <item
            android:id="@+id/action_show_unnormal"
            android:visible="false"
            android:title="@string/text_unnormal"/>

        <item
            android:id="@+id/action_show_all"
            android:visible="false"
            android:checked="true"
            android:title="@string/text_all"/>
    </group>

    <!--<item-->
        <!--android:id="@+id/mvl_jump_number"-->
        <!--android:title="@string/text_jump_number"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/mvl_filter"-->
        <!--android:title="@string/change_filter"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/mvl_adjust"-->
        <!--android:title="@string/change_number"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/mvl_new_card"-->
        <!--android:title="@string/new_card"-->
        <!--app:showAsAction="never"-->
        <!--/>-->

    <!--<item-->
        <!--android:id="@+id/mvl_refresh_card"-->
        <!--android:title="@string/text_refresh_cards"-->
        <!--app:showAsAction="never" />-->
</menu>