<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_style_table_number"
        android:icon="@mipmap/ic_btn_datachange"
        android:title="@string/action_table_number"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_style_adjust_volume"
        android:icon="@mipmap/ic_btn_adjust_number"
        android:title="@string/action_adjust_volume"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_style_ok"
        android:icon="@mipmap/ic_ok_char"
        android:title="@string/action_ok"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>

