<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:fitsSystemWindows="true"
  android:orientation="vertical">

<!--  <android.support.design.widget.AppBarLayout-->
<!--    android:id="@+id/avl_appbar"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:theme="@style/AppTheme.AppBarOverlay">-->

<!--    <android.support.v7.widget.Toolbar-->
<!--      android:id="@+id/avl_toolbar"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="?attr/actionBarSize"-->
<!--      android:background="?attr/colorPrimary"-->
<!--      app:popupTheme="@style/AppTheme.PopupOverlay" />-->
<!--  </android.support.design.widget.AppBarLayout>-->

  <com.gc.materialdesign.views.SmoothProgressBar
    android:id="@+id/loading_process"
    style="@style/GradientProgressBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height10"
    android:layout_below="@id/avl_appbar"
    android:indeterminate="true" />

    <!--户号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_left_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_user_number" />

        <EditText
            android:id="@+id/et_user_number"
            android:inputType="number"
            style="@style/text_right_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_60"
            android:hint="@string/edit_hint_please_input_user_number" />

    </LinearLayout>

    <!--任务编号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_left_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address" />

        <EditText
            android:id="@+id/et_address"
            style="@style/text_right_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_60"
            android:hint="@string/edit_hint_please_input_address"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_search_result"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/view_border"
        android:gravity="center"
        android:text="@string/text_search"
        android:textColor="@color/color_gray_5b5b5b"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>
